added race condition demo and README